--- a/landing.html
+++ b/landing.html
@@ -35,21 +35,14 @@
             <div class="c-explanation">
                 <p>A place to find population per country per year!</p>
                 <p>Follow our newletter to stay up to date</p>
-                <p>We will release in Summer 2021</p>
+                <p>We will release in Summer 2020</p>
             </div>
 
             <div class="c-form">
                 <form>
-                    <p class="c-form-field js-email-field">
-                        <label class="c-label js-email-label" for="username">
-                            Email address
-                            <span class="c-label__error-message js-email-error-message has-error">
-                                This field is required
-                            </span>
-                        </label>
-                        <input class="c-input js-email-input" type="email" name="username" id="username" placeholder="e.g. john@doe.com" required>
-                    </p>
-                    <button class="c-button js-sign-in-button">Sign up</button>
+                    <label class="c-form-label" for="email">Email address <span class="c-label__error-message">{errormessage}</span></label>
+                    <input class="c-form-item" type="email" id="email" name="email" placeholder="eg. john.doe@gmail.com" required>
+                    <input class="c-form-submit" type="submit" value="Sign Up">
                 </form> 
             </div>
         </div>
