--- a/landing.html
+++ b/landing.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/screen.css">
 
     <!-- Scripts -->
-    <script src="/script/validation.js"></script>
+    <script src="./script/validation.js"></script>
 
     <title>Country Population - Landing</title>
 </head>
