--- a/landing.html
+++ b/landing.html
@@ -34,23 +34,26 @@
 
             <div class="c-explanation">
                 <p>A place to find population per country per year!</p>
-                <p>Follow our newletter to stay up to date</p>
-                <p>We will release in Summer 2021</p>
+                <p>Sign up to stay up to date</p>
+                <p>We are planning to release in Summer 2021</p>
             </div>
 
             <div class="c-form">
-                <form>
+                <form action="#" autocomplete="off">
                     <p class="c-form-field js-email-field">
                         <label class="c-label js-email-label" for="username">
                             Email address
-                            <span class="c-label__error-message js-email-error-message has-error">
+                            <span class="c-label__error-message js-email-error-message">
                                 This field is required
                             </span>
                         </label>
                         <input class="c-input js-email-input" type="email" name="username" id="username" placeholder="e.g. john@doe.com" required>
                     </p>
-                    <button class="c-button js-sign-in-button">Sign up</button>
-                </form> 
+                    <p>
+                        <!-- Button -->
+                        <button class="o-button-reset c-button js-sign-in-button">Sign Up</button>
+                    </p>
+                </form>
             </div>
         </div>
     </div>
