--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Default meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Displaying growth and current population of a country">
+    <meta name="description" content="Displaying population per year of a country">
     <meta name="author" content="Emiel Thys">
 
     <!-- Favicon setup -->
